--- a/src/prestamos/FrmPrincipal.form
+++ b/src/prestamos/FrmPrincipal.form
@@ -74,6 +74,8 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnNuevoPrestamoActionPerformed"/>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="btnNuevoPrestamoKeyPressed"/>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="btnNuevoPrestamoKeyTyped"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButton2">
